--- a/store/templates/rosreestr/not_found.html
+++ b/store/templates/rosreestr/not_found.html
@@ -24,9 +24,9 @@
 		<div class="notfound">
 			<div class="notfound-404">
 				<h1>Oops!</h1>
-				<h2>Такого кадастрового номера не существует</h2>
+				<h2>Something went wrong</h2>
 			</div>
-			<a href="../">Вернуться на Главную</a>
+			<a href="../">Back to the Homepage</a>
 		</div>
 	</div>
 
