--- a/store/templates/rosreestr/search.html
+++ b/store/templates/rosreestr/search.html
@@ -7,8 +7,58 @@
 		<meta name="author" content="colorlib.com">
 		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
 		<link href="{% static 'css/search.css' %}" rel="stylesheet" />
+
+		<link href="{% static 'css/navbar.css' %}" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	</head>
 	<body>
+
+		<nav class="navbar navbar-default navbar-expand-lg navbar-light">
+			<div class="navbar-header d-flex col">
+				<a class="navbar-brand" href="">Brand<b>Name</b></a>  		
+				<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle navbar-toggler ml-auto">
+					<span class="navbar-toggler-icon"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+	<!-- Collection of nav links, forms, and other content for toggling -->
+			<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
+				<ul class="nav navbar-nav">
+					<li class="nav-item"><a href="" class="nav-link">Home</a></li>
+					<li class="nav-item"><a href="" class="nav-link">About</a></li>			
+				</ul>
+				<ul class="nav navbar-nav navbar-right ml-auto">
+					<li class="nav-item dropdown">
+						<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#"><i class="fa fa-user-o"></i> Sign In</a>
+						<ul class="dropdown-menu">
+							<li>
+
+                        		<form class="form-inline login-form" action="/examples/actions/confirmation.php" method="post">
+                            		<div class="input-group">
+                                		<span class="input-group-addon"><i class="fa fa-user"></i></span>
+                                		<input type="text" class="form-control" placeholder="Username" required>
+                            		</div>
+                            		<div class="input-group">
+                               			<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                                		<input type="text" class="form-control" placeholder="Password" required>
+                            		</div>
+                            		<button type="submit" class="btn btn-primary">Login</button>
+                        		</form>
+							</li>
+						</ul>
+					</li>
+					<li class="nav-item dropdown">
+						<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#"><i class="fa fa-user-o"></i> Sign Up</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
 		<div class="s130">
 			<form method="POST" action="../object_info/"> {% csrf_token %}
 				<div class="inner-form">
@@ -18,15 +68,17 @@
 								<path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
 							</svg>
 						</div>
-						<input id="search" type="text" placeholder="Введите кадастровый номер" name='search'>
+						<input id="search" type="text" placeholder="Enter cadastral number" name='search'>
 					</div>
 					<div class="input-field second-wrap">
-						<button class="btn-search" type="submit">Найти Объект</button>
+						<button class="btn-search" type="submit">Find Object</button>
 					</div>
 				</div>
-				<span class="info">Например: 35:21:0203013:1248</span>
+				<span class="info">Example: 35:21:0203013:1248</span>
 			</form>
 		</div>
 		<script src="{% static 'js/search/extention/choices.js' %}"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</body>
 </html>
