--- a/store/templates/rosreestr/search.html
+++ b/store/templates/rosreestr/search.html
@@ -5,14 +5,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="author" content="colorlib.com">
+		<title>Brand Name</title>
 		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
 		<link href="{% static 'css/search.css' %}" rel="stylesheet" />
 
-		<link href="{% static 'css/navbar.css' %}" rel="stylesheet" />
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		 <link href="{% static 'css/navbar.css' %}" rel="stylesheet" />
+    	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
+    	<link href="{% static 'css/search.css' %}" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+		<link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 	</head>
 	<body>
 
@@ -28,36 +34,34 @@
 			</div>
 	<!-- Collection of nav links, forms, and other content for toggling -->
 			<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
-				<ul class="nav navbar-nav">
-					<li class="nav-item"><a href="" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="" class="nav-link">About</a></li>			
-				</ul>
 				<ul class="nav navbar-nav navbar-right ml-auto">
-					<li class="nav-item dropdown">
-						<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#"><i class="fa fa-user-o"></i> Sign In</a>
-						<ul class="dropdown-menu">
-							<li>
+					{% if user.is_authenticated %}
+						<li>
+              				<a class="nav-link" href=''>Profile</a>
+            			</li>
 
-                        		<form class="form-inline login-form" action="/examples/actions/confirmation.php" method="post">
-                            		<div class="input-group">
-                                		<span class="input-group-addon"><i class="fa fa-user"></i></span>
-                                		<input type="text" class="form-control" placeholder="Username" required>
-                            		</div>
-                            		<div class="input-group">
-                               			<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                                		<input type="text" class="form-control" placeholder="Password" required>
-                            		</div>
-                            		<button type="submit" class="btn btn-primary">Login</button>
-                        		</form>
-							</li>
-						</ul>
-					</li>
-					<li class="nav-item dropdown">
-						<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#"><i class="fa fa-user-o"></i> Sign Up</a>
-					</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link" href="logout/"><i class="fa fa-user-o"></i> Log Out</a>
+						</li>
+					{% else %}
+						<li class="nav-item dropdown">
+							<a class="nav-link" href="login/"><i class="fa fa-user-o"></i> Sign In</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link" href="register/"><i class="fa fa-user-o"></i> Sign Up</a>
+						</li>
+					{% endif %}
 				</ul>
 			</div>
 		</nav>
+
+		{% if messages %}
+			{% for message in messages %}
+				<div class="alert alert-{{message.tags }}">
+					{{ message }}
+				</div>
+			{% endfor %}
+		{% endif %}
 
 		<div class="s130">
 			<form method="POST" action="../object_info/"> {% csrf_token %}
@@ -68,7 +72,7 @@
 								<path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
 							</svg>
 						</div>
-						<input id="search" type="text" placeholder="Enter cadastral number" name='search'>
+						<input id="search" type="text" placeholder="Enter kadastral number" name='search'>
 					</div>
 					<div class="input-field second-wrap">
 						<button class="btn-search" type="submit">Find Object</button>
