--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -37,7 +37,7 @@
           <ul class="nav navbar-nav navbar-right ml-auto">
           {% if user.is_authenticated %}
             <li>
-              <a class="nav-link" href=''>Profile</a>
+              <a class="nav-link" href={% url 'profile' %}>Profile</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href={% url 'logout' %}><i class="fa fa-user-o"></i> Log Out</a>
