--- a/store/templates/rosreestr/search.html
+++ b/store/templates/rosreestr/search.html
@@ -37,7 +37,7 @@
 				<ul class="nav navbar-nav navbar-right ml-auto">
 					{% if user.is_authenticated %}
 						<li>
-              				<a class="nav-link" href=''>Profile</a>
+              				<a class="nav-link" href='profile/'>Profile</a>
             			</li>
 
 						<li class="nav-item dropdown">
