--- a/store/templates/users/login.html
+++ b/store/templates/users/login.html
@@ -5,10 +5,14 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Log In</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-success" type="submit">Sign In</button>
+                <small class="text-muted ml-2">
+                    <a href="{% url 'password_reset' %}">Forgot Password?</a>
+                </small>
             </div>
         </form>
         <div class="border-top pt-3">
